--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "<4.3,>=4.0",
-        "dbtlr/php-airbrake": "dev-master"
+        "dbtlr/php-airbrake": "~1.1"
     },
     "autoload": {
         "psr-0": {
