--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,15 @@
 {
-    "name": "sparkhire/codebasehq",
-    "description": "Tools for integrating Laravel apps with CodebaseHQ features",
-    "authors": [{ "name": "Robert Reinhard", "email": "info@bkwld.com" }],
-    "license": "MIT",
-    "require": {
-        "php": ">=5.3.0",
-        "dbtlr/php-airbrake": "~1.1"
-    },
-    "autoload": {
-        "psr-0": {
-            "Bkwld\\CodebaseHQ": "src/"
-        }
-    },
-    "minimum-stability": "dev"
+  "name": "sparkhire/codebasehq",
+  "description": "Tools for integrating Laravel apps with CodebaseHQ features",
+  "license": "MIT",
+  "require": {
+    "php": ">=5.3.0",
+    "dbtlr/php-airbrake": "~1.1"
+  },
+  "autoload": {
+    "psr-0": {
+      "SparkHire\\CodebaseHQ": "src/"
+    }
+  },
+  "minimum-stability": "dev"
 }
